[package]
name = "mp3-to-nbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babycat = "0.0.14"
spectrum-analyzer = "1.2.5"
image = "0.24.2"
clap = { version = "4.3.23", features = ["derive", "color"] }
